# behavython

./: .gitattributes  .gitignore  Behavython_GUI.ui  Behavython_GUI.ui.bak  Behavython_GUI.ui.bak1  Behavython_GUI.ui.bak2  CITATION.cff  MANIFEST.in  README.md  behavython_back.py  behavython_front.py  behavython_gui.ui  behavython_gui_multiple_lineedits.ui  behavython_gui_v2.0.ui  behavython_plot_widget.py  by_front.py  dlc_helper_functions.py  gridtest.py  pyproject.toml  register_behavython_plot_widget.py  run_behavython.bat
Examples/: EPM0_rusults.xlsx  EPM1.csv  Teste
Video_analyse_validation/: analyse_test.py  animal_2_PYTHON.xlsx
Widgets/: custom_widgets.py
additional_info/: behavython_installer.bat
bonsai_generalized_files/: type_here_the_subjects_name.bonsai  type_here_the_subjects_name.bonsai.layout
bouts_data/: LEVA_1_2024-05-30 15-09-09_A1CX1DLC_resnet50_wtfJun20shuffle1_800000_filtered.csv  LEVA_1_2024-05-30 15-09-09_A1CX1DLC_resnet50_wtfJun20shuffle1_800000_filtered_skeleton.csv  LEVA_1_2024-05-30 15-09-09_A1CX1_roi.csv
draft/: Behavior_Analyse.py  Plot_EPM.py  Settings_dialog.py  Video_Analyse.py
draft_2/: Behavython_GUI.ui  Logo.pptx  Python_Translate.py  behavython_back.py  behavython_front.py
examples/: test_.csv
installation_script/: README.md  behavython_installer.bat
network/CD1-Matheus-2023-02-12/: config.yaml
network/CD1-Matheus-2023-02-12/dlc-models/iteration-1/CD1Feb12-trainset95shuffle1/test/: pose_cfg.yaml
network/CD1-Matheus-2023-02-12/dlc-models/iteration-1/CD1Feb12-trainset95shuffle1/train/: pose_cfg.yaml  snapshot-310000.index
network/CD1-Matheus-2023-02-12/videos/: aboveDLC_mobnet_100_CD1Feb12shuffle1_310000_filtered.csv  aboveDLC_mobnet_100_CD1Feb12shuffle1_310000_filtered_skeleton.csv  above_roi.csv
pip_install/: MANIFEST.in  README.md  setup.cfg
pip_install/behavython/: MANIFEST.in  README.md  setup.cfg
pip_install/behavython/behavython/: Behavython_GUI.ui  behavython_back.py  behavython_front.py  behavython_gui.py  behavython_gui.ui  behavython_plot_widget.py  dlc_helper_functions.py
pip_install/behavython/behavython/Video_analyse_validation/: animal_2_PYTHON.xlsx
repo_config_files/: Behavython_configuration_template.json  brainstorminng_behavython.txt  dlc_vy.yaml  req.txt
roi_network/: config.yaml
roi_network/dlc-models/iteration-0/find_cup_circleAug21-trainset95shuffle1/test/: pose_cfg.yaml
roi_network/dlc-models/iteration-0/find_cup_circleAug21-trainset95shuffle1/train/: checkpoint  learning_stats.csv  log.txt  pose_cfg.yaml  snapshot-600000.data-00000-of-00001  snapshot-600000.index
roi_network/evaluation-results/iteration-0/find_cup_circleAug21-trainset95shuffle1/: DLC_resnet50_find_cup_circleAug21shuffle1_600000-results.csv  DLC_resnet50_find_cup_circleAug21shuffle1_600000-snapshot-600000.h5
roi_network/training-datasets/iteration-0/UnaugmentedDataSet_find_cup_circleAug21/: CollectedData_matheus.csv  CollectedData_matheus.h5  Documentation_data-find_cup_circle_95shuffle1.pickle  find_cup_circle_matheus95shuffle1.mat
scripts/: transfer_dlc_labels.py
src/: run_behavython.bat
src/behavython/: main.py
src/behavython/_legacy/assets/: behavython_gui_old.ui
src/behavython/_legacy/scripts/: by_front.py  dlc_helper_functions.py
src/behavython/analysis/: analysis.py  animal.py  metrics.py  models.py  preprocess.py  primitives.py  validation.py  workflow.py
src/behavython/app/: app_context.py  bootstrap.py  main.py
src/behavython/assets/: Model-Assisted Label Transfer.md
src/behavython/assets/config/: arena_config.json  behavython_installer.bat
src/behavython/config/: defaults.py  paths.py  ui.py
src/behavython/core/: app_context.py  defaults.py  exceptions.py  paths.py  utils.py
src/behavython/dlc/: models.py  validation.py  workflow.py
src/behavython/ffmpeg/: README.txt
src/behavython/gui/: dependencies.py  dialogs.py  main_window.py  ui_loader.py  video_cropper.py
src/behavython/gui/assets/ui/: behavython_gui.ui  behavython_gui_refactored.ui  video_cropper.ui
src/behavython/pipeline/: export.py  filters.py  geometry.py  metrics.py  models.py  plotting.py  workflow.py
src/behavython/pipeline/plugins/: dlc.py
src/behavython/services/: app_logging.py  config_service.py  deeplabcut_service.py  dialogs.py  dlc_assisted_label_session.py  downloader.py  file_dialogs.py  logging.py  logging_service.py  runtime_storage.py  storage.py  validation.py  video_service.py  yaml_repair_service.py
src/behavython/shared/: input_resolver.py  models.py
src/behavython/tasks/: signals.py  task_runner.py  task_worker.py
src/behavython/test/01_dlc_project/c57_network_2025_minified/: config.yaml
src/behavython/test/01_dlc_project/c57_network_2025_minified/dlc-models/iteration-0/c57_social_a_and_bAug20-trainset95shuffle1/test/: pose_cfg.yaml
src/behavython/test/01_dlc_project/c57_network_2025_minified/dlc-models/iteration-0/c57_social_a_and_bAug20-trainset95shuffle1/train/: checkpoint  learning_stats.csv  log.txt  (+3 more)
src/behavython/test/01_dlc_project/c57_network_2025_minified/training-datasets/iteration-0/UnaugmentedDataSet_c57_social_a_and_bAug20/: CollectedData_matheus.csv  CollectedData_matheus.h5  Documentation_data-c57_social_a_and_b_95shuffle1.pickle  c57_social_a_and_b_matheus95shuffle1.mat
src/behavython/workers/: task_runner.py  task_worker.py
validation/data/: A10_25-04-02_11-39-31DLC_resnet50_cx_branca_bicho_brancoApr1shuffle1_700000_filtered.csv  A10_25-04-02_11-39-31DLC_resnet50_cx_branca_bicho_brancoApr1shuffle1_700000_filtered_skeleton.csv  A10_25-04-02_11-39-31_roi.csv  A11_25-04-02_11-59-46DLC_resnet50_cx_branca_bicho_brancoApr1shuffle1_700000_filtered.csv  A11_25-04-02_11-59-46DLC_resnet50_cx_branca_bicho_brancoApr1shuffle1_700000_filtered_skeleton.csv  A11_25-04-02_11-59-46_roi.csv  A12_25-04-02_12-20-49DLC_resnet50_cx_branca_bicho_brancoApr1shuffle1_700000_filtered.csv  A12_25-04-02_12-20-49DLC_resnet50_cx_branca_bicho_brancoApr1shuffle1_700000_filtered_skeleton.csv  A12_25-04-02_12-20-49_roi.csv
video_analyse_validation/: analyse_test.py  animal_2_MATLAB.xlsx
