[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "behavython"
version = "0.1.0"
description = "Automated behavioral analysis software and pipeline."
readme = "README.md"
requires-python = ">=3.10, <3.11"

# The dependencies are mapped exactly from the verified installer script.
dependencies = [
    # Core Scientific Stack
    "numpy<2.0",
    "matplotlib==3.8.3",
    "seaborn",
    "pandas",
    "scipy",
    "openpyxl",
    "scikit-image",
    "tables",
    "opencv-python",
    "PyYAML",
    "tqdm",
    "debugpy",
    "natsort",
    "pyarrow",
    
    # TensorFlow Stack
    "tensorflow<2.11",
    "tensorpack",
    "tf_slim",
    
    # PyTorch Stack (Default PyPI fallback; see installation note below)
    "torch",
    "torchvision",
    "torchaudio",
    
    # DeepLabCut
    "deeplabcut==2.3.10",
    "PySide6==6.7.3"
]

[project.scripts]
behavython = "behavython.main:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["behavython*"]