[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "behavython"
version = "0.9.2"
description = "Automated behavioral analysis software and pipeline for neuroscience."
readme = "README.md"
requires-python = ">=3.10, <3.11"
license = "GPL-3.0-only"
license-files = ["LICENSE", "CITATION.cff"]
keywords = ["neuroscience", "behavior", "deeplabcut", "plusmaze", "openfield"]

authors = [
  {name = "Matheus Costa", email = "matheuscosta3004@gmail.com"},
  {name = "João Pedro", email = "mcjpedro@gmail.com"}
]

dependencies = [
    # Core Scientific Stack
    "numpy<2.0",
    "matplotlib==3.8.3",
    "seaborn",
    "pandas",
    "scipy",
    "openpyxl",
    "scikit-image",
    "tables",
    "opencv-python",
    "PyYAML",
    "tqdm",
    "debugpy",
    "natsort",
    "pyarrow",
    "flask",
    "shapely",

    # TensorFlow Stack (DLC 2.3 specific)
    "tensorflow<2.11",
    "tensorpack",
    "tf_slim",

    # PyTorch Stack
    "torch",
    "torchvision",
    "torchaudio",

    # DeepLabCut + GUI
    "deeplabcut==2.3.10",
    "PySide6==6.7.3"
]

[project.urls]
"Homepage" = "https://github.com/mrdrzit/Behavython"
"Bug Tracker" = "https://github.com/mrdrzit/Behavython/issues"

[project.scripts]
behavython = "behavython.main:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["behavython*"]

[tool.setuptools.package-data]
behavython = [
    "gui/assets/**/*",
    "ffmpeg/bin/*",
    "ffmpeg/**/*",
]