[metadata]
name = behavython
version = 0.5.3
author = João Pedro & Matheus Costa
author_email = mcjpedro@gmail.com, matheuscosta3004@gmail.com
url = https://github.com/mrdrzit/Behavython
description = Based on the original code by Flávio Mourão used together with bonsai workflows
long_description = file: README.md
long_description_content_type = text/markdown
keywords = plusmaze, openfield, behavior, analysis
license = GPL-3.0

[options]
package_dir=
    =behavython
packages=find:
include_package_data=True
zip_safe=True
install_requires =
    pyqt5
    scikit-image
    pandas
    numpy
    matplotlib
    tk
    scipy

[options.entry_points]
console_scripts= 
    run_interface=behavython.behavython_front:main

[options.packages.find]
where=behavython