[metadata]
name = behavython
version = 0.6.3
author = João Pedro & Matheus Costa
author_email = mcjpedro@gmail.com, matheuscosta3004@gmail.com
url = https://github.com/mrdrzit/Behavython
description = To be used in conjunction with Bonsai-RX to extract behavior from video
long_description = file: README.md
long_description_content_type = text/markdown
keywords = plusmaze, openfield, behavior, analysis
license = GPL-3.0

[options]
package_dir=
    =behavython
packages=find:
include_package_data=True
zip_safe=True
install_requires =
    deeplabcut[gui, tf]
    seaborn >= 0.13.1
    pyside6
    openpyxl
    scikit-image
    pandas
    numpy
    matplotlib
    tk
    scipy

[options.entry_points]
console_scripts= 
    behavython=behavython.behavython_front:main

[options.packages.find]
where=behavython