#!/usr/bin/env python

[metadata]
name = behavython
version = 0.1.0
author = João Pedro & Matheus 
author_email = mcjpedro@gmail.com
url = https://github.com/mrdrzit/Behavython
description = Example package description
long_description = file: README.md
long_description_content_type = text/markdown
keywords = pluz, maze, open, field, behavior, analysis
license = GPL-3.0

[options]
packages = find:
zip_safe = False
include_package_data = True
install_requires =
    pyqt5
    scikit-image
    pandas
    numpy
    matplotlib
    tk
    scipy
py_modules = behavython

[options.entry_points]
console_scripts = 
    run_interface = behavython.behavython_front:main

[options.package_data]
src = behavython/logo/*.png, README.md, behavython/Behavython_GUI.ui 