[metadata]
name = behavython
version = 0.3.5
author = João Pedro & Matheus Costa
author_email = mcjpedro@gmail.com, matheuscosta3004@gmail.com
url = https://github.com/mrdrzit/Behavython
description = A port to Python of the MATLAB script created by Flávio Mourão in NNC
long_description = file: README.md
long_description_content_type = text/markdown
keywords = plusmaze, openfield, behavior, analysis
license = GPL-3.0

[options]
packages = find:
package_dir =
    = behavython
include_package_data = True
zip_safe = True
install_requires =
    pyqt5
    scikit-image
    pandas
    numpy
    matplotlib
    tk
    scipy
py_modules = behavython

[options.entry_points]
console_scripts = 
    run_interface = behavython.behavython_front:main

[options.packages.find]
where = behavython